examples/bad/type1.swifty
//all conditions have to be of boolean type
if (2+2) {
   print 100
}

while (5) {
   print 100
}
